fixed flickering, fixed last product is not fully visible

--- a/packages/scandipwa/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/packages/scandipwa/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -16,48 +16,23 @@
     --slide-content-in-duration: 300ms;
     --slide-content-out-duration: 300ms;
     --fade-content-in-duration: 300ms;
+    --fade-content-out-duration: 300ms;
 }
 
 @mixin slide-content-in {
-    animation: slide-in var(--slide-content-in-duration) ease forwards;
-
-    @keyframes slide-in {
-        from {
-            transform: translateY(-100%);
-        }
-
-        to {
-            transform: translateY(0);
-        }
-    }
+    animation: slideIn var(--slide-content-in-duration) ease forwards;
 }
 
 @mixin slide-content-out {
-    animation: slide-out var(--slide-content-out-duration) ease forwards;
-
-    @keyframes slide-out {
-        from {
-            transform: translateY(0);
-        }
-
-        to {
-            transform: translateY(-100%);
-        }
-    }
+    animation: slideOut var(--slide-content-out-duration) ease forwards;
 }
 
 @mixin fade-content-in {
-    animation: fade-in var(--fade-content-in-duration) ease forwards;
+    animation: fadeIn var(--fade-content-in-duration) ease forwards;
+}
 
-    @keyframes fade-in {
-        from {
-            opacity: 0;
-        }
-
-        to {
-            opacity: 1;
-        }
-    }
+@mixin fade-content-out {
+    animation: fadeOut var(--fade-content-out-duration) ease forwards;
 }
 
 .SearchOverlay {
@@ -77,6 +52,10 @@
             inset-inline: 0;
             background-color: rgba(81, 81, 81, 0.265);
             pointer-events: none;
+
+            &_isActiveClosingAnimation {
+                @include fade-content-out();
+            }
         }
     }
 
@@ -107,7 +86,6 @@
         }
 
         @include mobile {
-            height: 100%;
             box-shadow: 0px 3px 3px rgba(195, 195, 195, 0.648);
         }
 
